# iracing-sdk-cmake

./: .gitignore  CMakeLists.txt  CODEOWNERS  LICENSE  License.md  README.md
irsdk/: CMakeLists.txt  irsdk_utils.cpp
irsdk/irsdk_dumpSetup/: CMakeLists.txt  dumpSetup.cpp
irsdk/irsdk_ir2ad/: ir2ad.cpp
irsdk/irsdk_lapTiming/: console.cpp  lapTiming.cpp
toolchain/: mingw-w64-windows.cmake  mingw-w64.cmake
